# WebRTC_APM

./: CMakeLists.txt  README.md  aecm_main.cc  agc_main.c  cng.cpp  cng_main.cpp  main.cc  ns_main.c  nsp_main.cc  signal_processing_library.c  test_common.cc  test_common.h  timing.h  vad_main.cc
apm/src/main/jni/webrtc/: CMakeLists.txt
apm/src/main/jni/webrtc/webrtc/: typedefs.h
apm/src/main/jni/webrtc/webrtc/common_audio/vad/include/: webrtc_vad.h
apm/src/main/jni/webrtc/webrtc/modules/audio_processing/aec/include/: echo_cancellation.h
apm/src/main/jni/webrtc/webrtc/modules/audio_processing/aecm/include/: echo_control_mobile.h
apm/src/main/jni/webrtc/webrtc/modules/audio_processing/agc/include/: gain_control.h
apm/src/main/jni/webrtc/webrtc/modules/audio_processing/ns/include/: noise_suppression.h  noise_suppression_x.h
include/: Buffer.h  agc.h  array_view.h  checks.h  cng.h  signal_processing_library.h  spl_inl.h
ns/: aligned_malloc.cc  aligned_malloc.h  audio_buffer.cc  audio_buffer.h  audio_util.cc  audio_util.h  channel_buffer.h  fast_math.cc  fast_math.h  fft4g.cc  fft4g.h  histograms.cc  histograms.h  noise_estimator.cc  noise_estimator.h  noise_suppressor.cc  noise_suppressor.h  ns_common.h  ns_config.h  ns_fft.cc  ns_fft.h  prior_signal_model.cc  prior_signal_model.h  prior_signal_model_estimator.cc  prior_signal_model_estimator.h  push_sinc_resampler.cc  push_sinc_resampler.h  quantile_noise_estimator.cc  quantile_noise_estimator.h  signal_model.cc  signal_model.h  signal_model_estimator.cc  signal_model_estimator.h  sinc_resampler.cc  sinc_resampler.h  speech_probability_estimator.cc  speech_probability_estimator.h  splitting_filter.cc  splitting_filter.h  suppression_params.cc  (+5 more)
src/: agc.c  cng.cpp
vad/: vad.cc  webrtc_vad.c
